--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="text_gray">#828282</color>
     <color name="divider_color">#828282</color>
     <color name="light_gray_stroke">#D3D3D3</color>
+    <color name="darker_gray">#666666</color>
 </resources>
