--- a/app/src/main/res/layout/cook_write_02.xml
+++ b/app/src/main/res/layout/cook_write_02.xml
@@ -10,7 +10,7 @@
     <!-- 상단 고정 툴바 -->
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="24dp"
+        android:layout_height="30dp"
         android:background="@color/search_color"/>
 
     <LinearLayout
@@ -19,7 +19,6 @@
         android:layout_height="56dp"
         android:layout_alignParentTop="true"
         android:background="@drawable/bg_search_top"
-        android:elevation="4dp"
         android:gravity="center_vertical"
         android:orientation="horizontal"
         android:paddingHorizontal="16dp">
@@ -77,7 +76,7 @@
             <!-- 요리 재료 칸 부분 -->
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="151dp"
+                android:layout_height="wrap_content"
                 android:layout_marginBottom="24dp"
                 android:background="@drawable/bg_search_bar_orange_border"
                 android:orientation="vertical">
@@ -96,72 +95,13 @@
 
                 <!--재료 입력 레이아웃-->
                 <LinearLayout
+                    android:id="@+id/ingredients_container"
                     android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:layout_gravity="center"
-                    android:layout_margin="5dp"
-                    android:background="@drawable/bg_search_bar_orange_border"
-                    android:orientation="horizontal">
-
-                    <!-- 재료 입력칸 -->
-                    <LinearLayout
-                        android:id="@+id/frame"
-                        android:layout_width="320dp"
-                        android:layout_height="50dp"
-                        android:background="@drawable/bg_search_bar_orange_border"
-                        android:elevation="4dp"
-                        android:orientation="horizontal">
-
-                        <EditText
-                            android:id="@+id/a1"
-                            android:layout_width="200dp"
-                            android:layout_height="match_parent"
-                            android:layout_margin="5dp"
-                            android:hint="재료를 입력해주세요"
-                            android:textColor="#FFFFFF"
-                            aandroid:background="@drawable/bg_main_rounded_top_white"
-                            android:textColorHint="#CCCCCC"
-                            android:textSize="16dp"/>
-
-                        <EditText
-                            android:id="@+id/a2"
-                            android:layout_width="50dp"
-                            android:layout_height="match_parent"
-                            android:layout_marginTop="10dp"
-                            android:layout_marginBottom="10dp"
-                            android:layout_marginRight="5dp"
-                            android:text="0"
-                            android:gravity="center"
-                            android:textColor="@color/black"
-                            aandroid:background="@drawable/bg_login_rounded"
-                            android:textColorHint="#CCCCCC"
-                            android:textSize="16dp"/>
-
-                        <EditText
-                            android:id="@+id/a3"
-                            android:layout_width="50dp"
-                            android:layout_height="match_parent"
-                            android:layout_marginTop="10dp"
-                            android:layout_marginBottom="10dp"
-                            android:text="0"
-                            android:gravity="center"
-                            android:textColor="@color/black"
-                            aandroid:background="@drawable/bg_login_rounded"
-                            android:textColorHint="#CCCCCC"
-                            android:textSize="16dp"/>
-                    </LinearLayout>
-
-                    <ImageButton
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:src="@drawable/ic_arrow_back"
-                        android:background="@color/white"
-                        android:layout_margin="5dp"
-                        />
-
-                </LinearLayout>
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical" />
 
                 <TextView
+                    android:id="@+id/button_add_ingredient"
                     android:layout_width="match_parent"
                     android:layout_height="52dp"
                     android:layout_marginBottom="20dp"
@@ -174,13 +114,10 @@
                     android:textStyle="bold"/>
             </LinearLayout>
 
-
-
-
             <!-- 요리 재료 칸 부분 -->
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="151dp"
+                android:layout_height="wrap_content"
                 android:layout_marginBottom="24dp"
                 android:background="@drawable/bg_search_bar_orange_border"
                 android:orientation="vertical">
@@ -199,46 +136,13 @@
 
                 <!--재료 입력 레이아웃-->
                 <LinearLayout
+                    android:id="@+id/tools_container"
                     android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:layout_gravity="center"
-                    android:layout_margin="5dp"
-                    android:background="@drawable/bg_search_bar_orange_border"
-                    android:orientation="horizontal">
-
-                    <!-- 재료 입력칸 -->
-                    <LinearLayout
-                        android:id="@+id/frameb"
-                        android:layout_width="320dp"
-                        android:layout_height="50dp"
-                        android:background="@drawable/bg_search_bar_orange_border"
-                        android:elevation="4dp"
-                        android:orientation="horizontal">
-
-                        <EditText
-                            android:id="@+id/b1"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:layout_margin="5dp"
-                            android:hint="재료를 입력해주세요"
-                            android:textColor="#FFFFFF"
-                            aandroid:background="@drawable/bg_main_rounded_top_white"
-                            android:textColorHint="#CCCCCC"
-                            android:textSize="16dp"/>
-
-                    </LinearLayout>
-
-                    <ImageButton
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:src="@drawable/ic_arrow_back"
-                        android:background="@color/white"
-                        android:layout_margin="5dp"
-                        />
-
-                </LinearLayout>
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical" />
 
                 <TextView
+                    android:id="@+id/button_add_tool"
                     android:layout_width="match_parent"
                     android:layout_height="52dp"
                     android:layout_marginBottom="20dp"
