--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,17 @@
     <color name="darker_gray">#666666</color>
     <color name="search_color">#FFF9F4</color>
     <color name="light_gray">#E0E0E0</color>
+
+
+    <!--  -->
+    <color name="main_orange">#FF9020</color>
+    <color name="sub_orange">#FFA94D</color>
+    <color name="cream">#FFF9F4</color>
+
+    <color name="black20">#202020</color>
+    <color name="black40">#404040</color>
+    <color name="white20">#F5F5F5</color>
+
+    <color name="text_brown">#331C0F</color>
+    <color name="text_sub">#828282</color>
 </resources>
