--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,11 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Base.Theme.recipe_pocket" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+        <!-- 전역 기본 폰트 -->
+        <item name="android:fontFamily">@font/notosans_regular</item>
+        <!-- 기본 텍스트 색상 -->
+        <item name="android:textColor">@color/text_brown</item>
+
         <!-- 주요 브랜드 색상 (앱 바, 주요 버튼 등) -->
         <item name="colorPrimary">@color/orange</item>
         <!-- colorPrimary의 어두운 버전 (상태 표시줄 등) -->
